# High-performance-chat-server-cluster

./: CMakeLists.txt  README.md  test.txt
include/: public.hpp
include/client/: chatclient.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.hpp  friendmodel.hpp  groupmodel.hpp  offmsgmodel.hpp  usermodel.hpp
include/server/middleware/: redis.hpp
include/server/model/: friend.hpp  group.hpp  groupuser.hpp  offmsg.hpp  user.hpp
src/client/: chatclient.cpp  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp  friendmodel.cpp  groupmodel.cpp  offmsgmodel.cpp  usermodel.cpp
src/server/middleware/: redis.cpp
